--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@types/react": "^18.0.0",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.0.0",
     "@umijs/lint": "^4.0.0",
     "dumi": "^2.3.0",
@@ -75,5 +76,6 @@
   "dependencies": {
     "antd": "^5.17.4",
     "react-beautiful-dnd": "^13.1.1"
-  }
+  },
+  "repository": "git@github.com:826300474/czy-component.git"
 }
